--- a/content/dergi/sayi-0-ikoniksandalyeler.html
+++ b/content/dergi/sayi-0-ikoniksandalyeler.html
@@ -20,19 +20,19 @@ tags= [
 <div class="row">
     <div class="col-md-6">
         <h3>X-Chair</h3>
-        <img class="img-fluid" src="/img/x-chair.jpg" alt=""><br>
+        <img loading="lazy" class="img-fluid" src="/img/x-chair.jpg" alt=""><br>
        <p> Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır.
        <br> Orta İtalya'dan gelen önden veya yandan bakıldığında X gibi bir çerçeveye sahip bir tür katlanır sandalye.  İtalya'da Savonarola veya Dante sandalyesi veya Almanya'da Luther sandalyesi olarak da bilinen X sandalyesi, Rönesans Avrupa’sına yayılan hafif, katlanabilir, pratik bir formdur. </p>
     </div>
     <div class="col-md-6">
         <h3>No.14 Chair</h3>
-        <img class="img-fluid" src="/img/thonet-no-14-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/thonet-no-14-chair.jpg" alt="">
        <p>Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilya ürünüdür. Bükülmüş ağaç olarak bilinen bir buhar bükme teknolojisi kullanılarak üretilmiştir. Uygun fiyatı ve sade tasarımı ile o zamana kadar yapılmış en çok satan sandalyelerden biri haline gelmiştir. Öyle ki 1859 ile 1930 yılları arasında yaklaşık 50 milyon no.14 chair satılmıştır ve satılmaya da devam etmektedir.</p>
-       <img class="img-fluid" src="/img/cabaret-chair-thonet.jpg" alt="">
+       <img loading="lazy" class="img-fluid" src="/img/cabaret-chair-thonet.jpg" alt="">
     </div>
     <div class="col-md-6">
         <h3>Cassina 292 Hill House 1</h3>
-        <img class="img-fluid" src="/img/292-Hill-House.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/292-Hill-House.jpg" alt="">
        <p>
         1902'de Charles Mackintosh tarafından tasarlanan ve ilk olarak 1973'te Cassina tarafından üretilen Hill House sandalyesi, Japon tasarımından esinlenerek tasarlanan soyut bir geometri sandalyesidir.
       <br>  Bu ikonik sandalye, Charles Rennie Mackintosh'un stilini ve en zorlu üretim süreçlerine korkusuz yaklaşımını yansıtıyor.  Doğrusal, geometrik form ve Japon tasarımından esinlenilerek tasarlanan soyut bir geometrik bir sandalyedir. Uzun sırt, dikey ve yatay ızgaralardan oluşan dikey çizgilerle tanımlanır.        
@@ -40,7 +40,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Wassily Chair</h3>
-        <img class="img-fluid" src="/img/wassily-chair-breuer.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/wassily-chair-breuer.jpg" alt="">
        <p>
         Bauhaus okulunun bir üyesi mimar ve tasarımcı Marcel Breuer tarafından 1925-26 yılında tasarlanan deri sandalye. Model b3 olarak da bilinir. Ünlü ressam Wassily Kandinsky bu tasarıma hayran kalınca Breuer, ressam için de bir kopya yaptırır. Ürün bu şekilde ressamın ismiyle anılmaya başlar. Mid–century modern (1950'lerin ortalarına kadar bir stil tanımlayıcısı olarak kullanılan terim) tarz sevenler için vazgeçilmez bir mobilya olmuştur. Krom kaplama metal borudan hazırlanan konstrüksiyona dikilen deri oturma yeri ve sırt dayama kısmı, konforlu bir oturma sağlar.
        <br> Bu sandalye, malzemelerin (bükülmüş çelik boru ve demir iplik) ve üretim yöntemlerinin kullanımında devrim niteliğindeydi.  1925 yılında Breuer, ilk bisikletini satın aldı ve boru şeklindeki çelik çerçevesinin hafifliğinden etkilendi.  Bu, mobilya tasarımında malzemeyi kullanma denemesine ilham verdi.
@@ -48,7 +48,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Barcelona Chair</h3>
-        <img class="img-fluid" src="/img/barcelona-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/barcelona-chair.jpg" alt="">
        <p>
         Barcelona sandalye, Ludwig Mies van der Rohe ve Lilly Reich tarafından tasarlanan bir sandalyedir. Her ne kadar Bauhaus döneminden pek çok mimar ve mobilya tasarımcısı, "sıradan insan" için iyi tasarlanmış evler ve kusursuz bir şekilde üretilen mobilyalar sağlama niyetindeyken, Barselona sandalyesi bir istisnaydı. 1929 Uluslararası Barselona Sergisi’ndeki Alman Pavyonu için tasarlandı.
      <br>   Koltuğun iskeleti birbirine bağlı iki çift yassı çelik çubuktan yapılmıştır. Bir çift çelik çubuk bir eğri çizerek hem arkalığı, hem de ön ayakları oluşturur. Arka ayaklar ise bunları çaprazlama keser, yayvan bir “S” biçiminde kıvrılarak oturma yerini destekler. Yassı çelik çubuklar kromla kaplıdır. Koltuğun arkalığı ve oturma yeri deri şeritlerle örülmüş, bunların üstüne deri kaplı ve düğmeli sünger minderler konmuştur.
@@ -56,14 +56,14 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Zig Zag Chair</h3>
-        <img class="img-fluid" src="/img/chair-zigzag.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/chair-zigzag.jpg" alt="">
        <p>
         1934'te Cassina için Gerrit Thomas Rietveld tarafından tasarlanmıştır. Bu ikonik mobilya kırlangıç eklemleri kullanılarak geleneksel bacaklar ve koltuk arkası dizisinden kaçınan Z şeklinde birleştirilen 4 düz ahşap karodan yapılmış, minimalist bir tasarıma sahiptir.
     </p>
     </div>
     <div class="col-md-6">
         <h3>Eames Plastic Chair</h3>
-        <img class="img-fluid" src="/img/Charles-and-Ray-Eames-plastic-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/Charles-and-Ray-Eames-plastic-chair.jpg" alt="">
        <p>
         Charles ve Ray Eames tarafından tasarlanan sandalye, bir dizi sandalyenin parçası ve 1950 yılında mobilya tarihinde ilk seri üretilen plastik sandalye olarak kalıplanmış cam elyaf takviyeli polyester reçineden yapılmıştır. 
     <br>    Tasarımcı çift, yıllarca insan vücudunun konturlarına uyacak şekilde kalıplanmış tek parça bir koltuk kabuğunun temel fikrini keşfetti. 1940'lı yıllarda kontrplak ve alüminyum levha ile yapılan deneyler tatmin edici olmayan sonuçlar ürettikten sonra, alternatif malzeme arayışları onları cam elyaf takviyeli polyester reçineye yönlendirdi.
@@ -72,7 +72,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Ant Chair</h3>
-        <img class="img-fluid" src="/img/fritz-hansen-ant-sedia.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/fritz-hansen-ant-sedia.jpg" alt="">
        <p>
         Ant Chair, modern sandalye tasarımının bir klasiğidir. 1952 yılında Arne Jacobsen tarafından Danimarkalı ilaç firması Novo Nordisk'in kantininde kullanılmak üzere tasarlanmıştır. Başı kalkmış bir karıncanın ana hatlarına yaklaşık benzerliğinden dolayı karınca ismi ile adlandırılmıştır.
     <br><br>    Sandalye hafif, dengeli, istiflenmesi kolay ve kullanıcının ayaklarını dolaştırmayı en aza indirecek şekilde tasarlanmıştır.  
@@ -81,7 +81,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Egg Chair</h3>
-        <img class="img-fluid" src="/img/arne-jacobsen-egg-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/arne-jacobsen-egg-chair.jpg" alt="">
        <p>
        Arne Jacobsen, Egg Chair'i 1958 yılında Kopenhag'daki SAS Royal Hotel'in lobi ve resepsiyon alanları için tasarladı. Otel binasının mobilya da dahil olmak üzere her unsurunu tasarladı. Egg chair, Jacobsen’ın tüm tasarımının zaferlerinden biridir, binanın neredeyse tamamen dikey ve yatay yüzeylerine heykelsi bir tezat oluşturuyor. 
      <br><br>   Jacobsen, Yumurta Sandalyesini döşemenin altındaki güçlü bir köpük iç kabuktan kalıpladı. Bir heykeltıraş gibi, garajında kil ile deney yaparak kabuğun mükemmel şeklini bulmaya çalıştı. Sonuç, kullanıcıyı çevreleyen kamusal alanlarda gizlilik sağlayan benzersiz bir şekildir.
@@ -89,7 +89,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Panton Chair</h3>
-        <img class="img-fluid" src="/img/panton-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/panton-chair.jpg" alt="">
        <p>
         Panton Sandalye, mobilya tasarımı tarihinde bir klasik. 1960 yılında Verner Panton tarafından tasarlanan sandalye, Vitra (1967) ile iş birliği içinde seri üretim için geliştirildi. Tamamen plastikten tek parça halinde üretilen ilk sandalye oldu.
      <br><br>   Bu sandalyenin konforu, konsol yapısının insan biçiminde bir şekle ve biraz esnek bir malzemeye sahip olmasından kaynaklanmaktadır. Ayrı ayrı veya gruplar halinde kullanılabilir ve iç ve dış ortamlar için uygundur. Çok sayıda uluslararası tasarım ödülü aldı ve birçok tanınmış müzenin koleksiyonlarında temsil edildi.  Etkileyici formu nedeniyle, yirminci yüzyılın bir simgesi haline geldi.        
@@ -97,7 +97,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Ball Chair</h3>
-        <img class="img-fluid" src="/img/vintage-egg-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/vintage-egg-chair.jpg" alt="">
        <p>
         Ball Chair veya Globe Chair 1963 yılında Eero Aarnio tarafından en basit geometrik formlardan biri olan top kullanılarak tasarlandı. 1966'da Köln Mobilya Fuarı'nda tanıtıldı. Fin tasarımının en ünlü ve sevilen klasiklerinden biridir. 
      <br><br>   Top sandalye (diğer bir deyişle Küre sandalye) endüstriyel tasarımda sadece şekli için değil, aynı zamanda özel alan oluşturması yönüyle de bir klasiktir. Tamamen alışılmadık şekilli bir sandalye, dış sesleri koruyan ve rahatlamak için özel bir alan oluşturan, kendi ekseni etrafında dönerek de dış görünüşte, kullanıcı için değişkenlik sağlar. Bu nedenle dış dünyadan tamamen dışlanmaz.
@@ -106,7 +106,7 @@ tags= [
     </div>
     <div class="col-md-6">
         <h3>Wiggle Side Chair</h3>
-        <img class="img-fluid" src="/img/gehry-wiggle-chair.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/gehry-wiggle-chair.jpg" alt="">
        <p>
         Wiggle Side Chair, Mimar Frank Gehry’nin 1972 mobilya serisi ‘Easy Edges’in bir parçası olup, karton gibi günlük bir malzemeye yeni bir estetik boyut getirmeyi başardı. Bu heykelsi sandalye sadece rahat değil, aynı zamanda güçlü ve sağlamdı.
       <br><br>  Gehry, mimari modeller oluşturmak için zaten karton kullanıyordu ve birbirine yapıştırıldığında çok güçlü hale geldiğini fark etti. Malzemenin mukavemetini ve esnekliğini arttırmak için, karton tabakaları birbirine dik açılarda kat kat bir araya getirmiştir.        
