--- a/content/dergi/sayi-0-markutekibi.html
+++ b/content/dergi/sayi-0-markutekibi.html
@@ -14,15 +14,15 @@ tags= [
 +++
 <div class="container">
 <div class="row">
-    <div class="col-md-6"><img class="img-fluid" src="/img/img25.jpg" alt=""> <br><br></div>
-    <div class="col-md-6"><img class="img-fluid" src="/img/img28.jpg" alt=""><br><br></div>
-    <div class="col-md-4"><img class="img-fluid" src="/img/img11.jpg" alt=""><br><br></div>
-    <div class="col-md-8"><img class="img-fluid" src="/img/markut-adada.jpg" alt=""><br><br></div>
-    <div class="col-md-4"><img class="img-fluid" src="/img/img10.jpg" alt=""><br><br></div>
-    <div class="col-md-5"><br><br><img class="img-fluid" src="/img/markut-galeri.jpg" alt=""><br><br></div>
-    <div class="col-md-3"><img class="img-fluid" src="/img/img14.jpg" alt=""><br><br></div>
-    <div class="col-md-6"><img class="img-fluid" src="/img/markut-workshop-2.jpg" alt=""><br><br></div>
-    <div class="col-md-6"><img class="img-fluid" src="/img/IMG_5953.jpg" alt=""><br><br></div>
+    <div class="col-md-6"><img loading="lazy" class="img-fluid" src="/img/img25.jpg" alt=""> <br><br></div>
+    <div class="col-md-6"><img loading="lazy" class="img-fluid" src="/img/img28.jpg" alt=""><br><br></div>
+    <div class="col-md-4"><img loading="lazy" class="img-fluid" src="/img/img11.jpg" alt=""><br><br></div>
+    <div class="col-md-8"><img loading="lazy" class="img-fluid" src="/img/markut-adada.jpg" alt=""><br><br></div>
+    <div class="col-md-4"><img loading="lazy" class="img-fluid" src="/img/img10.jpg" alt=""><br><br></div>
+    <div class="col-md-5"><br><br><img loading="lazy" class="img-fluid" src="/img/markut-galeri.jpg" alt=""><br><br></div>
+    <div class="col-md-3"><img loading="lazy" class="img-fluid" src="/img/img14.jpg" alt=""><br><br></div>
+    <div class="col-md-6"><img loading="lazy" class="img-fluid" src="/img/markut-workshop-2.jpg" alt=""><br><br></div>
+    <div class="col-md-6"><img loading="lazy" class="img-fluid" src="/img/IMG_5953.jpg" alt=""><br><br></div>
 </div>
 <h2>Markut ekibinden sevgiyle...</h2>
 <small>
