--- a/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
+++ b/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
@@ -21,7 +21,7 @@ tags= [
 +++
 
 <div class="container">
-    <div class="text-center"><img class="img-fluid" src="/img/evolution-desk.gif" alt="Çalışma Masasının Teknolojiyle Beraber Yıllar İçindeki Değişimi."></div>
+    <div class="text-center"><img loading="lazy" class="img-fluid" src="/img/evolution-desk.gif" alt="Çalışma Masasının Teknolojiyle Beraber Yıllar İçindeki Değişimi."></div>
     <div class="row">
      <div class="col-md-6">  <p>Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz.
         Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün
@@ -29,7 +29,7 @@ tags= [
         önce insanlar, ürünlerle üretmek veya tüketmek için fiziksel olarak etkileşime giriyordu. Fakat bilgisayarların
         insanların hayatına girmesiyle birlikte bilgisayarlar fiziksel ürünlerle birleşti ve dijital ürünler ortaya
         çıktı. Bu da kullanıcıların ürünlerle etkileşimini büyük ölçüde değiştirdi.</p></div>
-        <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt="Ürünlerde Dijitalleşme"><br><br></div>
+        <div class="col-md-6"><br><br><img loading="lazy" class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt="Ürünlerde Dijitalleşme"><br><br></div>
     </div>
 <div class="row">
     <div class="col-md-12"><p>Dijital bir dergi olarak fizikselden dijitale dönen ürünlerin canlı bir örneğiyiz. Bunun yanı sıra e-kitaplar
@@ -54,7 +54,7 @@ tags= [
                 <li><b>Duygusal tatmin</b> (Ne kadar iyi hissettiriyor?)</li>
             </ul>
         </p></div>
-        <div class="col-md-6"><br><img class="img-fluid" src="/img/dijitale-yolculuk.png" alt="Dijitale Yolculuk Illustrasyon"></div>
+        <div class="col-md-6"><br><img loading="lazy" class="img-fluid" src="/img/dijitale-yolculuk.png" alt="Dijitale Yolculuk Illustrasyon"></div>
 </div><br><br>
 <div class="row">
     <div class="col-md-4">    <p>Dergi adına konuşursak basılı derginin hazırlanmasına yardımcı araçların olması güzel bir şey fakat elimizde
@@ -93,7 +93,7 @@ tags= [
                     deneyiminde arzu edilenin ne olduğu keşfedilir ve ardından tasarıma geçilir.</li>
             </ul>
         </div>
-        <div class="col-md-6"><br><br><br> <img class="img-fluid" src="/img/kullanim-deneyimi-algilari.png" alt="Kullanıcı Deneyiminde Algılar. UX (User Experince) deneyim algıları."></div>
+        <div class="col-md-6"><br><br><br> <img loading="lazy" class="img-fluid" src="/img/kullanim-deneyimi-algilari.png" alt="Kullanıcı Deneyiminde Algılar. UX (User Experince) deneyim algıları."></div>
     </div>
     <button
     class="btn markutbtn mt-4"
