--- a/content/dergi/sayi-1-markut-nedir.html
+++ b/content/dergi/sayi-1-markut-nedir.html
@@ -24,9 +24,9 @@ tags=[]
             <p>Kafasını yumurtadan çıkartan Markut, her sayısıyla daha da büyüyecek ve uçmayı öğrenecektir. Gözlerinizi gökyüzünden ayırmamanızı ve yeni sayımızı keyifle okumanızı dileriz...</p>
             </div>
         <div class="col-md-7">
-            <img class="img-fluid" src="/img/markut-illustrasyon-yumurta.jpg" alt="">
+            <img loading="lazy" class="img-fluid" src="/img/markut-illustrasyon-yumurta.jpg" alt="">
             <small>illustrasyon: Şahsenem Göksu Göktürk</small></div>
-        <div class="offset-md-2 col-md-8 mt-5"><img class="img-fluid" src="/img/markut-endustriyel-tasarim.jpg" alt="">
+        <div class="offset-md-2 col-md-8 mt-5"><img loading="lazy" class="img-fluid" src="/img/markut-endustriyel-tasarim.jpg" alt="">
             <small>illustrasyon: Zeynep Yarar</small></div> 
     </div>
 </div>
