--- a/content/dergi/sayi-1-tasarımda-kompozisyon.html
+++ b/content/dergi/sayi-1-tasarımda-kompozisyon.html
@@ -25,7 +25,7 @@ tags= [
   </div>
   <div class="row mt-5">
     <div class="col-md-5">
-      <img
+      <img loading="lazy"
         class="img-fluid"
         src="/img/Piet-Mondrian.jpg"
         alt="Piet Mondrian Composition II in Red, Blue, and Yellow, 1930"
@@ -66,7 +66,7 @@ tags= [
         denge yarattığını ve bu dengenin de uyumu oluşturduğunu fark edebiliriz.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/HerbertBayer_PostcardBauhausAusstellungWeimar_1923_mudac.jpg" alt="Herbert Bayer, Weimar Sergisi, 1923">
+    <div class="col-md-6 mt-5"><img loading="lazy" class="img-fluid" src="/img/HerbertBayer_PostcardBauhausAusstellungWeimar_1923_mudac.jpg" alt="Herbert Bayer, Weimar Sergisi, 1923">
     <small>Herbert Bayer, Weimar Sergisi, 1923</small></div>
     <div class="col-md-6">
       <p>
@@ -81,7 +81,7 @@ tags= [
         odağı o kısma çeker diyebiliriz.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/Lissitzky_El_1924-25_Proun.jpg" alt="El Lissitzky, Proun, 1924-25">
+    <div class="col-md-6 mt-5"><img loading="lazy" class="img-fluid" src="/img/Lissitzky_El_1924-25_Proun.jpg" alt="El Lissitzky, Proun, 1924-25">
     <small>El Lissitzky, Proun, 1924-25</small></div>
     <div class="col-md-6">
       <p>
@@ -89,7 +89,7 @@ tags= [
 <strong>Denge,</strong> kompozisyondaki görsel ağırlığın oluşturduğu bir terazide eşitliği sağlayan bir tasarım ilkesidir. Dengeyi sağlamak için <strong>simetrik</strong>, <strong>asimetrik</strong> ve <strong>radyal</strong> dediğimiz metodlar kullanılır. Simetrik denge yatay ya da dikey eksende aynalanmış görüntü ile oluşur. Simetrik öğeler göze kusursuz görünüp estetik gelir. Asimetrik denge ise tam tersi şekilde ağırlığın bir tarafa verildiği diğer tarafın daha boş bırakıldığı ya da eğer bu bir grafik kompozisyon ise bir tarafta yazı diğer tarafta ise grafik öğenin yer alacağı şekilde konumlanır. Simetrik denge ne kadar kusursuz görünse de genelde doğru şekilde kurulmuş asimetrik dengenin yarattığı dinamizm izleyiciyi estetik olarak daha çok etkiler. Radyal denge ise bir noktanın etrafında dönen ve daha çok dairesel bir görünüm oluşturan bir denge çeşididir.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/Lissitzky_El_1919_Proun_10.jpg" alt="El Lissitzky, Proun 10, 1919">
+    <div class="col-md-6 mt-5"><img loading="lazy" class="img-fluid" src="/img/Lissitzky_El_1919_Proun_10.jpg" alt="El Lissitzky, Proun 10, 1919">
     <small>El Lissitzky, Proun 10, 1919</small></div>
     <div class="col-md-6">
       <p>
@@ -100,7 +100,7 @@ tags= [
         yapı içinde yaratılan hareket, olayı ilgi çekici hale getirir.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/henri-matisse-dance-3.jpg" alt="Henri Matisse - Dance 3 - 1910">
+    <div class="col-md-6 mt-5"><img loading="lazy" class="img-fluid" src="/img/henri-matisse-dance-3.jpg" alt="Henri Matisse - Dance 3 - 1910">
     <small>Henri Matisse, Dance 3, 1910</small></div>
     <div class="col-md-6">
       <p>
@@ -113,11 +113,11 @@ tags= [
         bir ton ile verilir. Başlık ile metin gövdesi arasında kalan öğeler -eğer
         varsa- bu iki öğeye uygun şekilde orta ayarda konumlandırılır.
       </p>
-      <img class="img-fluid" src="/img/elements-of-visual-communication-graphic_4.png" alt="Combining graphic elements within a composition">
+      <img loading="lazy" class="img-fluid" src="/img/elements-of-visual-communication-graphic_4.png" alt="Combining graphic elements within a composition">
       <small>Kompozisyon içinde grafik ögeleri, <a href="http://melissaclarkson.com/" target="_blank" rel="noopener noreferrer">Melissa Clarkson</a></small>
     </div>
     <div class="col-md-6 mt-5">
-        <img class="img-fluid" src="/img/kandinsky-vassilly.jpg" alt="">
+        <img loading="lazy" class="img-fluid" src="/img/kandinsky-vassilly.jpg" alt="">
         <small>Wassily Kandinsky, <a href="https://www.mutualart.com/Artwork/Poster/D5191B441C7FBFE2" target="_blank" rel="noopener noreferrer">Poster</a></small>
     </div>
     <div class="col-md-6 ">
@@ -134,7 +134,7 @@ tags= [
         görüntü oluşturur.
       </p>
     </div>
-    <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/Composition-No.I-with-Red-and-Blue.png" alt=""><small>Piet Mondrian - Composition in Colours / Composition No. I with Red and Blue - 1931</small></div>
+    <div class="col-md-6 mt-5"><img loading="lazy" class="img-fluid" src="/img/Composition-No.I-with-Red-and-Blue.png" alt=""><small>Piet Mondrian - Composition in Colours / Composition No. I with Red and Blue - 1931</small></div>
   </div>
 
   <h5>Kaynaklar</h5>
