--- a/content/dergi/sayi-2-biyomimikri.html
+++ b/content/dergi/sayi-2-biyomimikri.html
@@ -45,13 +45,13 @@ tags= [
       </p>
     </div>
     <div class="col-md-6 mt-4">
-      <img
+      <img loading="lazy"
         src="/img/creationofadam-biomimicry-long.jpg"
         alt="Biyomimikri kolaj Tasarımı"
       />
     </div>
   </div>
-  <img
+  <img loading="lazy"
     src="/img/biyomimikri-wordcloud_yatay.png"
     alt="Biyomimikri Kelime Bulutu Wordcloud"
   />
@@ -145,7 +145,7 @@ tags= [
       </ul>
     </div>
     <div class="col-md-6">
-      <img src="/img/sharkskin-swimmer.jpg" alt="Sharkskin Swimmer" />
+      <img loading="lazy" src="/img/sharkskin-swimmer.jpg" alt="Sharkskin Swimmer" />
     </div>
   </div>
   <div class="row">
@@ -182,8 +182,8 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img src="/img/leopard-eastgate-1.jpg" alt="Leopard Eastgate" />
-      <img src="/img/Isoptera_sandias_02.jpg" alt="Isotera Sandias" />
+      <img loading="lazy" src="/img/leopard-eastgate-1.jpg" alt="Leopard Eastgate" />
+      <img loading="lazy" src="/img/Isoptera_sandias_02.jpg" alt="Isotera Sandias" />
     </div>
   </div>
   <div class="row">
@@ -207,7 +207,7 @@ tags= [
       </ul>
     </div>
     <div class="col-md-6">
-      <img src="/img/FaaF.jpg" alt="Factory as a Forest" />
+      <img loading="lazy" src="/img/FaaF.jpg" alt="Factory as a Forest" />
     </div>
   </div>
   <p>
