--- a/content/dergi/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2-ikonik-masa-lamba.html
@@ -18,7 +18,7 @@ tags= [
 +++
 
 <div class="text-center">
-  <img src="/img/ikonik-masa-lambalari.jpg" alt="" />
+  <img loading="lazy" src="/img/ikonik-masa-lambalari.jpg" alt="" />
 </div>
 <div class="container">
   <p>
@@ -39,12 +39,12 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-4 mt-5">
-      <img src="/img/atollo-masa-lambasi.jpg" alt="ATOLLO MASA LAMBASI" />
+      <img loading="lazy" src="/img/atollo-masa-lambasi.jpg" alt="ATOLLO MASA LAMBASI" />
     </div>
     <div class="col-md-2 mt-5">
-      <img src="/img/atollo_lamp_2.png" alt="ATOLLO MASA LAMBASI" />
+      <img loading="lazy" src="/img/atollo_lamp_2.png" alt="ATOLLO MASA LAMBASI" />
       <br /><br />
-      <img src="/img/atollo-lamb-eskiz.jpg" alt="ATOLLO MASA LAMBASI ESKİZ" />
+      <img loading="lazy" src="/img/atollo-lamb-eskiz.jpg" alt="ATOLLO MASA LAMBASI ESKİZ" />
     </div>
     <div class="col-md-6">
       <h3>ATOLLO MASA LAMBASI</h3>
@@ -73,15 +73,15 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-4 mt-5">
-      <img src="/img/pipistrello-lamb.jpg" alt="PİPİSTRELLO MASA LAMBASI" />
+      <img loading="lazy" src="/img/pipistrello-lamb.jpg" alt="PİPİSTRELLO MASA LAMBASI" />
     </div>
     <div class="col-md-2 mt-5">
-      <img
+      <img loading="lazy"
         src="/img/pipistrello-illustrastion.jpg"
         alt="PİPİSTRELLO MASA LAMBASI"
       />
       <br /><br />
-      <img
+      <img loading="lazy"
         src="/img/pipstrello-three-lamb.jpg"
         alt="PİPİSTRELLO MASA LAMBASI"
       />
@@ -107,18 +107,18 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-3 mt-5">
-      <img src="/img/panthella-green.jpg" alt="PANTHELLA MİNİ MASA LAMBASI" />
-     <br><br> <img
+      <img loading="lazy" src="/img/panthella-green.jpg" alt="PANTHELLA MİNİ MASA LAMBASI" />
+     <br><br> <img loading="lazy"
         src="/img/panthella-design-lamb.jpg"
         alt="PANTHELLA MİNİ MASA LAMBASI"
       />
     </div>
     <div class="col-md-3 mt-5">
-      <img
+      <img loading="lazy"
         src="/img/phantella_2.png"
         alt="PANTHELLA MİNİ MASA LAMBASI"
       /><br /><br /><br /><br>
-      <img src="/img/panthella-colors.jpg" alt="PANTHELLA MİNİ MASA LAMBASI" />
+      <img loading="lazy" src="/img/panthella-colors.jpg" alt="PANTHELLA MİNİ MASA LAMBASI" />
     </div>
     <div class="col-md-6">
       <h3>PANTHELLA MİNİ MASA LAMBASI</h3>
@@ -145,19 +145,19 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-3 mt-5">
-      <img src="/img/anglepoise-lamb.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
-      <img
+      <img loading="lazy" src="/img/anglepoise-lamb.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
+      <img loading="lazy"
         src="/img/Anglepoise-Original-Tischleuchte_Taubengrau.jpg"
         alt="ANGLEPOİSE MASA LAMBASI"
       />
-      <img
+      <img loading="lazy"
         src="/img/Anglepois-lamb-artist-work.jpg"
         alt="ANGLEPOİSE MASA LAMBASI"
       />
     </div>
     <div class="col-md-3 mt-5">
-      <img src="/img/anglepoise2.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
-      <img src="/img/anglepois-three-lamb.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
+      <img loading="lazy" src="/img/anglepoise2.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
+      <img loading="lazy" src="/img/anglepois-three-lamb.jpg" alt="ANGLEPOİSE MASA LAMBASI" />
     </div>
     <div class="col-md-6">
       <h3>ANGLEPOİSE MASA LAMBASI</h3>
@@ -192,16 +192,16 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-4 mt-5">
-      <img src="/img/wagenfeld.jpg" alt="WAGENFELD MASA LAMBASI" />
-      <img src="/img/wagenfeld-mt8-lamb.jpg" alt="WAGENFELD MASA LAMBASI" />
+      <img loading="lazy" src="/img/wagenfeld.jpg" alt="WAGENFELD MASA LAMBASI" />
+      <img loading="lazy" src="/img/wagenfeld-mt8-lamb.jpg" alt="WAGENFELD MASA LAMBASI" />
     </div>
     <div class="col-md-2 mt-5">
-      <img src="/img/wagenfeld-mt8-lamp.png" alt="WAGENFELD MASA LAMBASI" />
-      <img
+      <img loading="lazy" src="/img/wagenfeld-mt8-lamp.png" alt="WAGENFELD MASA LAMBASI" />
+      <img loading="lazy"
         src="/img/stilwerk-wagenfeld-leuchte-produktion.jpg"
         alt="WAGENFELD MASA LAMBASI"
       />
-      <img
+      <img loading="lazy"
         src="/img/stilwerk-wagenfeld-leuchte-produktion-page-02.jpg"
         alt="WAGENFELD MASA LAMBASI"
       />
@@ -232,16 +232,16 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-4 mt-5">
-      <img src="/img/banker-lamp.jpg" alt="BANKER MASA LAMBASI" /> <br /><br />
-      <img
+      <img loading="lazy" src="/img/banker-lamp.jpg" alt="BANKER MASA LAMBASI" /> <br /><br />
+      <img loading="lazy"
         src="/img/banker-lamb-seven-movie.jpg"
         alt="BANKER MASA LAMBASI SEVEN FİLMİ"
       />
     </div>
     <div class="col-md-2 mt-5">
-      <img src="/img/banker-masa-lambasi.png" alt="BANKER MASA LAMBASI" />
-      <img src="/img/banker-lamb-detay.jpg" alt="BANKER MASA LAMBASI Detay" />
-      <img src="/img/banker-lamb-detay-2.jpg" alt="BANKER MASA LAMBASI Detay" />
+      <img loading="lazy" src="/img/banker-masa-lambasi.png" alt="BANKER MASA LAMBASI" />
+      <img loading="lazy" src="/img/banker-lamb-detay.jpg" alt="BANKER MASA LAMBASI Detay" />
+      <img loading="lazy" src="/img/banker-lamb-detay-2.jpg" alt="BANKER MASA LAMBASI Detay" />
     </div>
     <div class="col-md-6">
       <h3>BANKER MASA LAMBASI</h3>
@@ -281,12 +281,12 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-3 mt-5">
-      <img src="/img/taccia-lamb.jpg" alt="TACCİA MASA LAMBASI" /><br /><br />
-      <img src="/img/stories-taccia-flos.jpg" alt="TACCİA MASA LAMBASI" />
+      <img loading="lazy" src="/img/taccia-lamb.jpg" alt="TACCİA MASA LAMBASI" /><br /><br />
+      <img loading="lazy" src="/img/stories-taccia-flos.jpg" alt="TACCİA MASA LAMBASI" />
     </div>
     <div class="col-md-3 mt-5">
-      <img src="/img/taccia_lamp_.png" alt="TACCİA MASA LAMBASI" />
-      <img
+      <img loading="lazy" src="/img/taccia_lamp_.png" alt="TACCİA MASA LAMBASI" />
+      <img loading="lazy"
         src="/img/stories_taccia_flos_master.jpg"
         alt="TACCİA MASA LAMBASI"
       />
@@ -319,15 +319,15 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-3 mt-5">
-      <img
+      <img loading="lazy"
         src="/img/snoopy-lamp-3-web.jpg"
         alt="SNOOPY MASA LAMBASI"
       /><br /><br />
-      <img src="/img/snoopy-lamp.jpg" alt="SNOOPY MASA LAMBASI" />
+      <img loading="lazy" src="/img/snoopy-lamp.jpg" alt="SNOOPY MASA LAMBASI" />
     </div>
     <div class="col-md-3 mt-5">
-      <img src="/img/snoopy-lamp-dec.jpg" alt="SNOOPY MASA LAMBASI" />
-      <img
+      <img loading="lazy" src="/img/snoopy-lamp-dec.jpg" alt="SNOOPY MASA LAMBASI" />
+      <img loading="lazy"
         src="/img/snoopy_illustration.jpg"
         alt="SNOOPY MASA LAMBASI Illustrasyon"
       />
@@ -348,15 +348,15 @@ tags= [
   <hr />
   <div class="row">
     <div class="col-md-3 mt-5">
-      <img src="/img/red-eclisse-lamb-three.png" alt="ECLİSSE MASA LAMBASI" />
-      <img
+      <img loading="lazy" src="/img/red-eclisse-lamb-three.png" alt="ECLİSSE MASA LAMBASI" />
+      <img loading="lazy"
         src="/img/Palainco_Artemide_Vico_Magistretti_Eclisse_Table_Lamp_Bedside_Lamp.jpg"
         alt="ECLİSSE MASA LAMBASI"
       />
-      <img src="/img/eclisse-technical-draw.jpg" alt="ECLİSSE MASA LAMBASI" />
+      <img loading="lazy" src="/img/eclisse-technical-draw.jpg" alt="ECLİSSE MASA LAMBASI" />
     </div>
     <div class="col-md-3 mt-5">
-      <img
+      <img loading="lazy"
         src="/img/eclisse_illustration.png"
         alt="ECLİSSE MASA LAMBASI Illustrasyon"
       />
