--- a/content/dergi/sayi-2-mutfak-endustriyel-tasarim.html
+++ b/content/dergi/sayi-2-mutfak-endustriyel-tasarim.html
@@ -51,7 +51,7 @@ tags= [
 		</div>
 		<div class="col-md-4 mt-5">
 			<figure class="figure">
-				<img class="figure-img img-fluid" src="/img/Christian_Steenstrup.jpg" alt="Christian Steenstrup" />
+				<img loading="lazy" class="figure-img img-fluid" src="/img/Christian_Steenstrup.jpg" alt="Christian Steenstrup" />
 				<figcaption class="figure-caption">Christian Steenstrup</figcaption>
 			</figure>
 		</div>
@@ -62,7 +62,7 @@ tags= [
 	<div class="row">
 		<div class="col-md-5">
 			<figure class="figure">
-				<img
+				<img loading="lazy"
 					class="figure-img img-fluid"
 					src="/img/top_monitor_refrigator.jpg"
 					alt="‘Monitör Üstü Buzdolabı' (Monitor-Top Refrigator)"
@@ -109,13 +109,13 @@ tags= [
 		</div>
 		<div class="col-md-5">
 			<figure class="figure">
-				<img class="figure-img img-fluid" src="/img/USS_Monitor_at_sea.jpg" alt="'USS Monitor' savaş gemisi" />
+				<img loading="lazy" class="figure-img img-fluid" src="/img/USS_Monitor_at_sea.jpg" alt="'USS Monitor' savaş gemisi" />
 				<figcaption class="figure-caption">'USS Monitor' savaş gemisi</figcaption>
 			</figure>
 		</div>
 	</div>
 	<div class="text-center mb-5">
-		<img src="/img/one_outh_of_every.jpg" alt="One Outh of Every Three is a General Electric!" />
+		<img loading="lazy" src="/img/one_outh_of_every.jpg" alt="One Outh of Every Three is a General Electric!" />
 	</div>
 	<div class="row">
 		<div class="col-md-8">
@@ -139,7 +139,7 @@ tags= [
 		</div>
 		<div class="col-md-4">
 			<figure class="figure">
-				<img
+				<img loading="lazy"
 					class="figure-img img-fluid"
 					src="/img/chris_and_refrigator.jpg"
 					alt="Christian Steenstrup ve Monitör Üstü Buzdolabı"
@@ -197,7 +197,7 @@ tags= [
 		</div>
 		<div class="col-md-7">
 			<figure class="figure">
-				<img class="figure-img img-fluid" src="/img/the39steps.jpg" alt="The 39 Steps - Alfred Hitcock" />
+				<img loading="lazy" class="figure-img img-fluid" src="/img/the39steps.jpg" alt="The 39 Steps - Alfred Hitcock" />
 				<figcaption class="figure-caption">The 39 Steps - Alfred Hitcock</figcaption>
 			</figure>
 		</div>
@@ -222,12 +222,12 @@ tags= [
 			</p>
 		</div>
 		<div class="col-md-5 mb-4">
-			<img src="/img/kelvinator.jpg" alt="Kelvinator" />
+			<img loading="lazy" src="/img/kelvinator.jpg" alt="Kelvinator" />
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-5">
-			<img src="/img/westinhouse.jpg" alt="Westinhouse Poster" />
+			<img loading="lazy" src="/img/westinhouse.jpg" alt="Westinhouse Poster" />
 		</div>
 		<div class="col-md-7">
 			<p>
@@ -267,11 +267,11 @@ tags= [
 				<br />
 				<br />
 			</p>
-			<img src="/img/ardeco.jpg" alt="Norge Buzdolabı ve Elektrikli Süpürge" />
+			<img loading="lazy" src="/img/ardeco.jpg" alt="Norge Buzdolabı ve Elektrikli Süpürge" />
 		</div>
 		<div class="col-md-4">
-			<img src="/img/henry_dreysfuss.jpg" alt="Henry Dreysfuss - Buzdolabı" />
-			<img src="/img/norge_base.jpg" alt="Norge Base - Howard Blood" />
+			<img loading="lazy" src="/img/henry_dreysfuss.jpg" alt="Henry Dreysfuss - Buzdolabı" />
+			<img loading="lazy" src="/img/norge_base.jpg" alt="Norge Base - Howard Blood" />
 		</div>
 	</div>
 	<div class="row">
@@ -283,7 +283,7 @@ tags= [
 			</p>
 		</div>
 		<div class="col-md-6">
-			<img src="/img/servel-norman_bell_gedes.jpg" alt="Servel - Electroluc Buzdolabı - Norman Bel Geddes" />
+			<img loading="lazy" src="/img/servel-norman_bell_gedes.jpg" alt="Servel - Electroluc Buzdolabı - Norman Bel Geddes" />
 		</div>
 	</div>
 	<p class="mt-5">
@@ -298,7 +298,7 @@ tags= [
 	</p>
 	<div class="row mt-5">
 		<div class="col-md-6">
-			<img src="/img/coldspot-super-fix.jpg" alt="Coldspot Super Six Buzdolabı" />
+			<img loading="lazy" src="/img/coldspot-super-fix.jpg" alt="Coldspot Super Six Buzdolabı" />
 		</div>
 		<div class="col-md-6">
 			<p>
