--- a/content/dergi/sayi-3-ikonik-kettle.html
+++ b/content/dergi/sayi-3-ikonik-kettle.html
@@ -32,7 +32,7 @@ tags= [
   <div class="row">
     <div class="col-md-6">
       <h2>Kettle 9091, Alessi</h2>
-      <img src="/img/Alessi-9091-Wasserkessel.jpg" alt="" />
+      <img loading="lazy" src="/img/Alessi-9091-Wasserkessel.jpg" alt="" />
       <blockquote>
         <p>
           Alessi, Sapper’ın fikri çok açıktı diye açıklıyor. Bana şöyle dedi:
@@ -42,7 +42,7 @@ tags= [
           kulaklara da.&quot;
         </p>
       </blockquote>
-      <img src="/img/richard-sapper-kettle-zoom.jpg" alt="" />
+      <img loading="lazy" src="/img/richard-sapper-kettle-zoom.jpg" alt="" />
     </div>
     <div class="col-md-6 mt-6">
       <p>
@@ -55,8 +55,8 @@ tags= [
         1982&#39;de piyasaya sürülen kettle 9091, Alessi&#39;nin ilk tasarım su
         ısıtıcısıydı ve çok sayıda tasarım müzesinin koleksiyonlarında bulundu.
       </p>
-      <img src="/img/alessi-richard-sapper-kettle.jpg" alt="" /> <br /><br />
-      <img src="/img/kettle-by-Richard-Sapper-for-Alessi.jpg" alt="" />
+      <img loading="lazy" src="/img/alessi-richard-sapper-kettle.jpg" alt="" /> <br /><br />
+      <img loading="lazy" src="/img/kettle-by-Richard-Sapper-for-Alessi.jpg" alt="" />
     </div>
   </div>
   <hr />
@@ -65,7 +65,7 @@ tags= [
   <div class="row">
     <div class="col-md-5">
       <figure class="figure">
-        <img
+        <img loading="lazy"
           class="figure-img img-fluid"
           src="/img/kettle-by-Michael-Graves-for-Alessi.jpg"
           alt=""
@@ -101,7 +101,7 @@ tags= [
       önce tasarladığı yeni ilaveyle piyasaya sürdü.
     </div>
     <div class="col-md-6">
-      <img src="/img/alessi-bollitore-tea-rex.jpg" alt="" />
+      <img loading="lazy" src="/img/alessi-bollitore-tea-rex.jpg" alt="" />
     </div>
   </div>
   <blockquote class="p-md-5">
@@ -112,13 +112,13 @@ tags= [
   </blockquote>
   <div class="row">
     <div class="col-md-4">
-      <img src="/img/9093-kettle_Michael-Graves_Alessi.jpg" alt="" />
+      <img loading="lazy" src="/img/9093-kettle_Michael-Graves_Alessi.jpg" alt="" />
     </div>
     <div class="col-md-4 pt-md-5">
-      <img src="/img/9093-kettle_Michael-Graves_Alessi_468.jpg" alt="" />
+      <img loading="lazy" src="/img/9093-kettle_Michael-Graves_Alessi_468.jpg" alt="" />
     </div>
     <div class="col-md-4">
-      <img src="/img/9093-kettle_Michael-Graves_Alessi_sketch.jpg" alt="" />
+      <img loading="lazy" src="/img/9093-kettle_Michael-Graves_Alessi_sketch.jpg" alt="" />
     </div>
   </div>
   <hr />
@@ -138,17 +138,17 @@ tags= [
   </div>
   <div class="row">
     <div class="col-md-5">
-      <img src="/img/alessi-ii-conico-kettle-o.jpg" alt="" />
+      <img loading="lazy" src="/img/alessi-ii-conico-kettle-o.jpg" alt="" />
     </div>
     <div class="col-md-7">
-      <img src="/img/Conica-Kettle-and-expresso.jpg" alt="" />
+      <img loading="lazy" src="/img/Conica-Kettle-and-expresso.jpg" alt="" />
     </div>
   </div>
   <hr />
   <h2>Marianne Brandt, Teapot</h2>
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/8459-tea-infuser.jpg" alt="" />
+      <img loading="lazy" src="/img/8459-tea-infuser.jpg" alt="" />
     </div>
     <div class="col-md-6">
       <p>
@@ -171,10 +171,10 @@ tags= [
         geliştirmeye yönelik ilk girişimlerindendi. Çaydanlık bir prototip
         olarak kaldı.
       </p>
-      <img src="/img/teapot.jpg" alt="" />
+      <img loading="lazy" src="/img/teapot.jpg" alt="" />
     </div>
     <div class="col-md-6">
-      <img src="/img/8459-tea-infusersq.jpg" alt="" class="pl-md-5" />
+      <img loading="lazy" src="/img/8459-tea-infusersq.jpg" alt="" class="pl-md-5" />
       <p>
         <em>Marianne Brandt</em>&#39;ın çay demliği, 361.000 dolara açık
         artırmada satılarak Bauhaus tasarımının satış rekorunu kırdı.
@@ -185,7 +185,7 @@ tags= [
 
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/fellow-stagg-kettle.jpg" alt="" />
+      <img loading="lazy" src="/img/fellow-stagg-kettle.jpg" alt="" />
     </div>
     <div class="col-md-6">
       <p>
@@ -209,9 +209,9 @@ tags= [
     </div>
   </div>
   <div class="row">
-    <div class="col-md-7 pt-md-5"><img src="/img/stagg-ekg.jpg" alt="" /></div>
+    <div class="col-md-7 pt-md-5"><img loading="lazy" src="/img/stagg-ekg.jpg" alt="" /></div>
     <div class="col-md-5">
-      <img
+      <img loading="lazy"
         src="/img/the-stagg-ekg-fellow-products-design-kitchen-appliances-kitchenware-homeware-kettles.jpg"
         alt=""
       />
@@ -221,7 +221,7 @@ tags= [
   <h2>Teawith Kettle</h2>
   <div class="row">
     <div class="col-md-4">
-      <img src="/img/teawith-kettle-keren-hu.jpg" alt="" />
+      <img loading="lazy" src="/img/teawith-kettle-keren-hu.jpg" alt="" />
     </div>
     <div class="col-md-4">
       <p>
@@ -246,19 +246,19 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img
+      <img loading="lazy"
         src="/img/teawith-kettle-keren-hu-home-appliance-kettle.jpg"
         alt=""
       />
       <br /><br />
-      <img src="/img/teawith-kettle-keren-hu-home.jpg" alt="" />
+      <img loading="lazy" src="/img/teawith-kettle-keren-hu-home.jpg" alt="" />
     </div>
   </div>
   <hr />
   <h2>Hot Bertaa, Alessi</h2>
   <div class="row">
     <div class="col-md-4">
-      <img src="/img/hot-bertaa-kettle-starck.jpg" alt="" /><br /><br />
+      <img loading="lazy" src="/img/hot-bertaa-kettle-starck.jpg" alt="" /><br /><br />
     </div>
     <div class="offset-md-1 col-md-6">
       <p>
@@ -275,7 +275,7 @@ tags= [
   </div>
   <div class="row">
     <div class="col-md-4">
-      <img src="/img/hot-bertaa-alessi-philippe-starck.jpg" alt="" />
+      <img loading="lazy" src="/img/hot-bertaa-alessi-philippe-starck.jpg" alt="" />
     </div>
     <div class="offset-md-1 col-md-6">
       <p>
@@ -299,7 +299,7 @@ tags= [
 
   <div class="row">
     <div class="col-md-6 pb-3">
-      <img src="/img/Miito-Nils-Chudy.jpg" alt="" />
+      <img loading="lazy" src="/img/Miito-Nils-Chudy.jpg" alt="" />
     </div>
     <div class="col-md-6">
       <p>
@@ -326,7 +326,7 @@ tags= [
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/Miito-by-Nils-Chudy.jpg" alt="" />
+      <img loading="lazy" src="/img/Miito-by-Nils-Chudy.jpg" alt="" />
     </div>
     <div class="col-md-6">
       <p>
@@ -352,14 +352,14 @@ tags= [
       </blockquote>
     </div>
     <div class="col-md-6">
-      <img src="/img/miito-kettle-glass-ceramic.jpg" alt="" />
+      <img loading="lazy" src="/img/miito-kettle-glass-ceramic.jpg" alt="" />
     </div>
   </div>
   <hr />
   <h2>Kttl, Anna Czaniecka</h2>
   <div class="row">
     <div class="col-md-4">
-      <img src="/img/kttle-no-marks.jpg" alt="" />
+      <img loading="lazy" src="/img/kttle-no-marks.jpg" alt="" />
     </div>
     <div class="offset-md-1 col-md-7">
       <blockquote>
@@ -385,10 +385,10 @@ tags= [
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/kettle-by-Anna-Czaniecka.jpg" alt="" />
+      <img loading="lazy" src="/img/kettle-by-Anna-Czaniecka.jpg" alt="" />
     </div>
     <div class="col-md-6 pl-md-5">
-      <img src="/img/kttl-anna-all-the-models.jpg" alt="" />
+      <img loading="lazy" src="/img/kttl-anna-all-the-models.jpg" alt="" />
     </div>
   </div>
   <blockquote class="p-md-5 m-md-5">
