--- a/content/dergi/sayi-3-iskandinav.html
+++ b/content/dergi/sayi-3-iskandinav.html
@@ -20,7 +20,7 @@ tags= [
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/kristina-dam-new-bowl.jpg" alt="" />
+      <img loading="lazy" src="/img/kristina-dam-new-bowl.jpg" alt="" />
       <p>
         1980'lerden itibaren yavaşlama sürecine giren İskandinav tasarım
         hareketi yerini artık İtalyan tasarımlarına bırakıyordu. Ancak popüler
@@ -30,7 +30,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img src="/img/iskandinav-tasarimi-dekorasyon.jpg" alt="" />
+      <img loading="lazy" src="/img/iskandinav-tasarimi-dekorasyon.jpg" alt="" />
     </div>
   </div>
   <p class="p-md-5">
@@ -48,8 +48,8 @@ tags= [
   <div class="row">
     <div class="col-md-6">
       <h2>Hans Wegner</h2>
-      <img src="/img/hans-wegner-with-chairs.jpg" alt="" />
-      <img src="/img/kennedy-nixon-hans-wegner.jpg" alt="John F. Kennedy ve
+      <img loading="lazy" src="/img/hans-wegner-with-chairs.jpg" alt="" />
+      <img loading="lazy" src="/img/kennedy-nixon-hans-wegner.jpg" alt="John F. Kennedy ve
       Richard Nixon'ın seçim tartışması, "The Chair", Hans Wegner, 1960"
       title="John F. Kennedy ve Richard Nixon'ın seçim tartışması, "The Chair",
       Hans Wegner, 1960">
@@ -64,7 +64,7 @@ tags= [
         boyunca, 100’den fazlası seri üretime sokulan ve tasarım ikonu haline
         gelen, 500’den fazla farklı sandalye tasarlamıştır.
       </p>
-      <img
+      <img loading="lazy"
         src="/img/wishbone-chair-hans-wegner.jpg"
         alt=""
         title="Hans Wegner “Wishbone Chair”, 1949"
@@ -73,7 +73,7 @@ tags= [
   </div>
 </div>
 <div class="text-center">
-  <img
+  <img loading="lazy"
     src="/img/panton-chair-verner-panton-1963.jpg"
     class="mt-6 mb-5"
     alt=""
@@ -83,7 +83,7 @@ tags= [
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/verner-panton.jpg" alt="" />
+      <img loading="lazy" src="/img/verner-panton.jpg" alt="" />
       <blockquote>
         Renk seçimi bir kumar olmamalı. Bilinçli bir karar olmalı. Renklerin bir
         anlamı ve işlevi vardır. -Verner Panton
@@ -97,7 +97,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img src="/img/panton-chair-sketch.jpg" alt="" />
+      <img loading="lazy" src="/img/panton-chair-sketch.jpg" alt="" />
       <p>
         İstiflenebilir bir plastik sandalye tasarlama fikri, İkinci Dünya
         Savaşı’ndan önce ilk olarak Alman mimar ve tasarımcı Ludwig Mies van der
@@ -132,7 +132,7 @@ tags= [
     </div>
     <div class="col-md-8">
       <figure class="figure">
-        <img class="figure-img img-fluid" src="/img/tias-eckhoff.jpg" alt="" />
+        <img loading="lazy" class="figure-img img-fluid" src="/img/tias-eckhoff.jpg" alt="" />
         <figcaption class="figure-caption">
           Tias Eckhoff, Norveçli endüstriyel tasarım öncüsü.
         </figcaption>
@@ -142,7 +142,7 @@ tags= [
   <div class="row">
     <div class="col-md-6">
       <h3>Eero Aarnio</h3>
-      <img src="/img/pastil-chair-portrait-eero-aarnio.jpg" alt="" />
+      <img loading="lazy" src="/img/pastil-chair-portrait-eero-aarnio.jpg" alt="" />
       <p>
         Aarnio’nun tasarımları, 1960’ların popüler kültürünün önemli bir
         parçasıydı ve dönemin bilim kurgu filmlerin setlerinde yerini almıştı.
@@ -168,7 +168,7 @@ tags= [
         için en ideal tasarıma sahip olduğunu yazdı.
       </blockquote>
       <figure class="figure">
-        <img
+        <img loading="lazy"
           class="figure-img img-fluid"
           src="/img/ball-chair-prisoner-movie.jpg"
           alt=""
@@ -183,7 +183,7 @@ tags= [
   </div>
   <div class="row">
     <div class="col-md-5">
-      <img src="/img/Eero-Aarnio-helinski.jpg" alt="" />
+      <img loading="lazy" src="/img/Eero-Aarnio-helinski.jpg" alt="" />
     </div>
     <div class="col-md-7 mt-md-5">
       <blockquote>
@@ -206,7 +206,7 @@ tags= [
   <div class="row mt-md-5">
     <div class="col-md-6">
       <figure class="figure">
-        <img
+        <img loading="lazy"
           class="figure-img img-fluid"
           src="/img/eero-arnio-double-bubble-lamba.jpg"
           alt=""
@@ -218,7 +218,7 @@ tags= [
     </div>
     <div class="col-md-6">
       <figure class="figure">
-        <img
+        <img loading="lazy"
           class="figure-img img-fluid"
           src="/img/eero-arnio-swan-lamba.jpg"
           alt=""
@@ -227,7 +227,7 @@ tags= [
           'Swan' Lamba, Eero Aarnio, 2007
         </figcaption>
       </figure>
-      <img src="" alt="" />
+      <img loading="lazy" src="" alt="" />
     </div>
   </div>
 
