--- a/content/dergi/sayi-3-kitchenaid.html
+++ b/content/dergi/sayi-3-kitchenaid.html
@@ -50,12 +50,12 @@ tags= [
     </div>
     <div class="col-md-3">
         <figure class="figure">
-            <img class="figure-img img-fluid" src="/img/kitchenaid_patent.png" alt="">
+            <img loading="lazy" class="figure-img img-fluid" src="/img/kitchenaid_patent.png" alt="">
             <figcaption class="figure-caption">KitchenAid Patent</figcaption>
         </figure>
     </div>
     <div class="col-md-4">
-        <img src="/img/kitchenaid-mikser-eski-tasarimi.jpg" alt="" />
+        <img loading="lazy" src="/img/kitchenaid-mikser-eski-tasarimi.jpg" alt="" />
       </div>
   </div>
 
@@ -90,7 +90,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6 mt-md-3">
-      <img src="/img/kitchenaid-mikser-kirmizi.jpg" alt="" />
+      <img loading="lazy" src="/img/kitchenaid-mikser-kirmizi.jpg" alt="" />
     </div>
   </div>
   <div class="row">
@@ -107,7 +107,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img src="/img/kitchenaid-store-logo.png" alt="" />
+      <img loading="lazy" src="/img/kitchenaid-store-logo.png" alt="" />
     </div>
   </div>
   <div class="row">
@@ -140,11 +140,11 @@ tags= [
     </div>
     <div class="col-md-2">
       <br /><br />
-      <img src="/img/Egmont-Arens.jpg" alt="" />
+      <img loading="lazy" src="/img/Egmont-Arens.jpg" alt="" />
     </div>
     <div class="col-md-4">
       <br /><br />
-      <img src="/img/egmont-arens-kitchenaid-stand.jpg" alt="" />
+      <img loading="lazy" src="/img/egmont-arens-kitchenaid-stand.jpg" alt="" />
     </div>
   </div>
   <div class="row">
@@ -165,12 +165,12 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img src="/img/egmont-arens-masa-lambasi.png" alt="" />
+      <img loading="lazy" src="/img/egmont-arens-masa-lambasi.png" alt="" />
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img
+      <img loading="lazy"
         src="/img/egmont-arens-ambalaj-tasarimlari-higgins-america-india-ink.jpg"
         alt=""
         title="egomnt Arens - Ambalaj Tasarımları"
@@ -214,7 +214,7 @@ tags= [
     </div>
 
     <div class="col-md-6">
-      <img src="/img/egmont-arens-meat-slicer.jpeg" alt="" />
+      <img loading="lazy" src="/img/egmont-arens-meat-slicer.jpeg" alt="" />
     </div>
   </div>
   <div class="row">
@@ -246,7 +246,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6 mt-6">
-      <img src="/img/kitchenaid-mixer-colorful.jpg" alt="" />
+      <img loading="lazy" src="/img/kitchenaid-mixer-colorful.jpg" alt="" />
     </div>
   </div>
 
@@ -260,7 +260,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-        <img src="/img/kitchenaid-mixer-illustration.png" alt="" />
+        <img loading="lazy" src="/img/kitchenaid-mixer-illustration.png" alt="" />
       </div>
   </div>
 
@@ -287,7 +287,7 @@ tags= [
     </div>
     <div class="col-md-4">
       <figure class="figure">
-        <img
+        <img loading="lazy"
           class="figure-img img-fluid"
           src="/img/julia-child-kichenaid-mixer.jpg"
           alt="Julia Child'ın kobalt mavisi KitchenAid stand mikseri"
