--- a/content/dergi/sayi-3-moodboard.html
+++ b/content/dergi/sayi-3-moodboard.html
@@ -47,13 +47,13 @@ tags= [
         olabilir.
       </p>
     </div>
-    <div class="col-md-8"><img src="/img/moodboard-paper.jpg" alt="" /></div>
+    <div class="col-md-8"><img loading="lazy" src="/img/moodboard-paper.jpg" alt="" /></div>
   </div>
 </div>
 <div class="container-fluid">
   <div class="row mt-5">
     <div class="col-md-4">
-      <img src="/img/moda-tasarim-moodboard-markut.jpg" alt="" />
+      <img loading="lazy" src="/img/moda-tasarim-moodboard-markut.jpg" alt="" />
     </div>
     <div class="col-md-4">
       <p>
@@ -86,16 +86,16 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img src="/img/desen-moodboard-markut.jpg" alt="" />
+      <img loading="lazy" src="/img/desen-moodboard-markut.jpg" alt="" />
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row mt-md-5">
     <div class="col-md-6">
-      <img src="/img/moodboard-design-markut.jpg" alt="" />
+      <img loading="lazy" src="/img/moodboard-design-markut.jpg" alt="" />
     </div>
-    <div class="col-md-6"><img src="/img/moodboard-tasarimi.jpg" alt="" /></div>
+    <div class="col-md-6"><img loading="lazy" src="/img/moodboard-tasarimi.jpg" alt="" /></div>
   </div>
   <h2>Endüstriyel Tasarım ve Moodboard</h2>
   <div class="row">
@@ -109,7 +109,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4 mt-md-5">
-      <img src="/img/design-research.png" alt="" />
+      <img loading="lazy" src="/img/design-research.png" alt="" />
     </div>
     <div class="col-md-5">
       <p>
@@ -127,9 +127,9 @@ tags= [
     </div>
   </div>
   <div class="row mb-5">
-    <div class="col-md-6"><img src="/img/moodboard-design.jpg" alt="" /></div>
+    <div class="col-md-6"><img loading="lazy" src="/img/moodboard-design.jpg" alt="" /></div>
     <div class="col-md-6">
-      <img src="/img/moodboard-sicak-renkler.jpg" alt="" />
+      <img loading="lazy" src="/img/moodboard-sicak-renkler.jpg" alt="" />
     </div>
   </div>
 
