--- a/content/dergi/sayi-4-3d-yazici.html
+++ b/content/dergi/sayi-4-3d-yazici.html
@@ -20,14 +20,14 @@ tags= [
 ]
 +++
 <div class="text-center">
-    <img style="max-height:700px;" src="/img/3-boyutlu-yaziliar-ve-endustriyel-tasarim.jpg" alt="" ></div>
+    <img loading="lazy" style="max-height:700px;" src="/img/3-boyutlu-yaziliar-ve-endustriyel-tasarim.jpg" alt="" ></div>
 <div class="container">
 <p>Bir önceki sayıda 3B yazıcılara tarihi, çeşitleri, malzemeleri ve uygulamalarna bir giriş yapmıştık. Bu sayıda ise 3B baskı sürecini, 3B yazıcı çeşitlerini, malzemelerini detaylandırıp, 3B baskı için tasarım yapılırken dikkat edilmesi gereken yerlere değineceğim. </p>
 <br><br>
 <p>Katmanlı/eklemeli üretim (hızlı prototipleme/3B baskı), katı bir nesne oluşturmak için bir malzemenin katmanlarının oluşturulduğu bir üretim yöntemidir. İlk CAD tasarımından 3B basılı parçaya kadar, eklemeli imalat genel bir dizi adım izler.</p>
 
 <h2>Katmanlı Üretim Süreci</h2>
-<img src="/img/3D-printing-process-chain_W640.jpg" alt="">
+<img loading="lazy" src="/img/3D-printing-process-chain_W640.jpg" alt="">
 <h3>1. CAD</h3>
 <p>Dijital bir model üretmek, eklemeli üretim sürecinin ilk adımıdır. Dijital bir model üretmenin en yaygın yöntemi bilgisayar destekli tasarımdır (CAD). </p>
 <p>Katmanlı imalat için tasarım yapılırken değerlendirilmesi gereken birkaç tasarım hususu vardır. Bunlar genellikle özellik geometrisi sınırlamalarına ve/veya kaçış deliği gereksinimlerine odaklanır ve teknolojiye göre değişir. </p>
@@ -44,10 +44,10 @@ tags= [
 
 <p></p>
 <div class="row">
-    <div class="col-md-3"><img src="/img/3d-printing.jpg" alt=""></div>
-    <div class="col-md-3"><img src="/img/3d-yazici-baski.jpg" alt=""></div>
-    <div class="col-md-3"><img src="/img/3-boyutlu-yazici-capak-temizleme.jpg" alt=""></div>
-    <div class="col-md-3"><img src="/img/3-boyutlu-yazici-baski.jpg" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/3d-printing.jpg" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/3d-yazici-baski.jpg" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/3-boyutlu-yazici-capak-temizleme.jpg" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/3-boyutlu-yazici-baski.jpg" alt=""></div>
 </div>
 
 <p>Belirli bir uygulama için en uygun Katmanlı Üretim (Additive Manufacturing-AM) sürecini seçmek zor olabilir. Mevcut 3B Baskı teknolojilerinin ve materyallerinin çok geniş yelpazesi, çoğu zaman bunların birkaçının uygulanabilir olabileceği anlamına gelir, ancak her biri boyutsal doğruluk, yüzey kalitesi ve işlem sonrası gereksinimlerinde farklılıklar sunar.</p>
@@ -56,50 +56,50 @@ tags= [
 <p>ISO / ASTM 52900 standardı, tüm farklı <strong>eklemeli üretim</strong> (3B baskı) türlerini bu yedi gruptan biri altında kategorize etti:</p>
 <div class="row">
     <div class="col-md-3"><p><strong>Malzeme Ekstrüzyonu (</strong><strong><em>FDM</em></strong><strong>-Fused Deposition Modeling):</strong> Malzeme, bir nozül veya delikten seçici olarak dağıtılır.</p>
-        <img src="/img/3-boyutlu-baski-sureci.jpg" alt="">
+        <img loading="lazy" src="/img/3-boyutlu-baski-sureci.jpg" alt="">
     </div>
-    <div class="col-md-3"><img src="/img/Principle-of-FDM-printing-process.jpg" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/Principle-of-FDM-printing-process.jpg" alt=""></div>
     <div class="col-md-3"><p><strong>Kazan Polimerizasyonu (</strong><strong><em>SLA</em></strong><strong> & </strong><strong><em>DLP</em></strong><strong>):</strong> Bir teknedeki sıvı fotopolimer, UV ışığı ile seçici olarak kürlenir.</p>
-        <img src="/img/3-boyutlu-yazicilar-baski-alma.jpg" alt="">
+        <img loading="lazy" src="/img/3-boyutlu-yazicilar-baski-alma.jpg" alt="">
         <small>SLA</small>
     </div>
-    <div class="col-md-3"><img src="/img/stereolith1.gif" alt=""></div>
+    <div class="col-md-3"><img loading="lazy" src="/img/stereolith1.gif" alt=""></div>
 </div>
 <br><br><br><br>
 <div class="row">
     <div class="col-md-4"><p><strong>Toz Yatak Füzyonu (</strong><strong><em>SLS, DMLS</em></strong><strong> ve </strong><strong><em>SLM</em></strong><strong>):</strong> Yüksek enerjili bir kaynak, toz parçacıklarını seçici olarak birleştirir.</p>
-       <img src="/img/3-boytlu-yazici-uygulamalari.jpg" alt=""> <small>SLS</small></div>
-    <div class="col-md-4"><img src="/img/Schematic_representation_of_granular_binding_fabrication.jpg" alt=""></div>
-    <div class="col-md-4"><img src="/img/3b-yazicilar-markut.jpg" alt=""><p><strong>Malzeme Püskürtme (</strong><strong><em>MJ</em></strong><strong>-Material Jetting)</strong>: Malzeme damlacıkları seçici olarak biriktirilir ve kürlenir.</p>
+       <img loading="lazy" src="/img/3-boytlu-yazici-uygulamalari.jpg" alt=""> <small>SLS</small></div>
+    <div class="col-md-4"><img loading="lazy" src="/img/Schematic_representation_of_granular_binding_fabrication.jpg" alt=""></div>
+    <div class="col-md-4"><img loading="lazy" src="/img/3b-yazicilar-markut.jpg" alt=""><p><strong>Malzeme Püskürtme (</strong><strong><em>MJ</em></strong><strong>-Material Jetting)</strong>: Malzeme damlacıkları seçici olarak biriktirilir ve kürlenir.</p>
         <details close="">
             <summary>Çalışma Prensibi</summary>
-            <img src="/img/F_ProcessAdditive_MaterialJetting.jpg" alt="">
+            <img loading="lazy" src="/img/F_ProcessAdditive_MaterialJetting.jpg" alt="">
             </details>
     </div>
 </div>
 <br><br><br><br>
 <div class="row">
     <div class="col-md-4"><p><strong>Bağlayıcı Püskürtme (</strong><strong><em>BJ</em></strong><strong>-Binder Jetting):</strong> Sıvı bağlama maddesi, bir toz yatağının bölgelerini seçici olarak bağlar.</p>
-        <img src="/img/3-boyutlu-baski-sureci-endustriyel-tasarim.jpg" alt="">
+        <img loading="lazy" src="/img/3-boyutlu-baski-sureci-endustriyel-tasarim.jpg" alt="">
         <details close="">
             <summary>Çalışma Prensibi</summary>
-            <img src="/img/F_ProcessAdditive_MaterialJetting.jpg" alt="">
+            <img loading="lazy" src="/img/F_ProcessAdditive_MaterialJetting.jpg" alt="">
             </details>
     </div>
     <div class="col-md-4">
         <p><strong>Doğrudan Enerji Biriktirme (</strong><strong><em>LENS, LBMD</em></strong><strong>):</strong> Yüksek enerji kaynağı, biriktirilirken malzemeyi birleştirir.</p>
-        <img src="/img/dogrudan-enerji-biriksitme-LENS-3d-print.jpg" alt="">
+        <img loading="lazy" src="/img/dogrudan-enerji-biriksitme-LENS-3d-print.jpg" alt="">
 <details close="">
 <summary>Çalışma Prensibi</summary>
-<img src="/img/F_ProcessAdditive_DirectedEnergyDeposition2x.jpg" alt="">
+<img loading="lazy" src="/img/F_ProcessAdditive_DirectedEnergyDeposition2x.jpg" alt="">
     
 </details></div>
     <div class="col-md-4">
         <p><strong>Levha Laminasyon (</strong><strong><em>LOM, UAM</em></strong><strong>):</strong> Malzeme tabakaları yapıştırılır ve katman katman oluşturulur.</p>
-        <img src="/img/Sheet_Lamination.jpg" alt="">
+        <img loading="lazy" src="/img/Sheet_Lamination.jpg" alt="">
         <details close="">
             <summary>Çalışma Prensibi</summary>
-            <img src="/img/Sheet_Layer.jpg" alt="">
+            <img loading="lazy" src="/img/Sheet_Layer.jpg" alt="">
                 
             </details></div>
 </div>
@@ -114,8 +114,8 @@ tags= [
         <p>Bununla birlikte, 3B yazıcılar tek bir baskı işinde farklı hammadde türleri ile baskı yapma kapasitesi kazanmaya devam ettikçe, yeni bir malzeme sınıfı ortaya çıkacaktır. Çok malzemeli 3B yazıcılar, tasarımcılara esnekliği, sertliği ve iletkenliği kontrol etme ve nihai bir üründe neredeyse sonsuz malzeme özellikleri kombinasyonuna olanak tanıyan hassas karışımlar oluşturabilir. Dijital olarak tasarlanmış ve hassas şekilde basılmış malzeme karışımları, özel fiziksel özelliklere sahip çeşitli ve daha önce görülmemiş çözümler sunacaktır.</p> 
     </div>
     <div class="col-md-6">
-        <img src="/img/3boyutlu-yazicilar-entas.jpg" alt=""><br>
-        <img src="/img/4-brackets.jpg" alt=""></div>
+        <img loading="lazy" src="/img/3boyutlu-yazicilar-entas.jpg" alt=""><br>
+        <img loading="lazy" src="/img/4-brackets.jpg" alt=""></div>
 </div>
 <details close="">
     <summary><strong>Plastikler</strong></summary>
@@ -143,8 +143,8 @@ tags= [
 <p></p>
 </div>
 <div class="container-fluid text-center">
-<img src="/img/Additive-Manufacturing-Infographic-3DHubs.original.jpg" alt="">
-<img src="/img/design-rules-for-3d-printing.jpg" alt="">
+<img loading="lazy" src="/img/Additive-Manufacturing-Infographic-3DHubs.original.jpg" alt="">
+<img loading="lazy" src="/img/design-rules-for-3d-printing.jpg" alt="">
 </div>
 <div class="container">
 <p style="color: #9B9A97; ">Bu tablolarda tüm makine türlerine ve tek tek tüm makinelerdeki tasarım kısıtlarına ve sağlarlıklarına yer verilmiştir. <a href="https://www.3dhubs.com/guides/3d-printing/#design-for-3d-printing" target="_blank">İnternet sitelerinde</a> daha detaylı bilgi bulunmaktadır.</p>
@@ -157,23 +157,23 @@ tags= [
     <div class="col-md-6">
         <p><strong>Çıkıntılar</strong></p>
 <p>Her çıkıntı bulunduğu zemine belli bir açı ile bağlıdır. 3b makinelerin destek malzemesi olmadan üretebileceği bir açı sınırı vardır. Desteğin üzerine yazdırılan katmanlar genellikle daha pürüzlü bir yüzey kaplamasına sahip olduğundan, <span style="text-decoration: underline;">bir modelin çıkıntılarını sınırlamak iyi bir uygulamadır.</span></p>
-        <img src="/img/3boyutlu-yazilar-baski.jpg" alt=""></div>
+        <img loading="lazy" src="/img/3boyutlu-yazilar-baski.jpg" alt=""></div>
     <div class="col-md-6">
         <p><strong>Set (duvar, yüzey) Kalınlıkları</strong></p>
         <p>Her makinenin doğru biçimde üretebileceği yüzey inceliği sınırı da vardır. Her zaman modele kalınlıklar eklemek gereklidir. <span style="text-decoration: underline;">0.8 mm den kalın duvarlar</span> tüm 3b süreçlerinde doğru şekilde basılabilir.</p>
-        <img src="/img/Wall-Thickness.jpg" alt="">
+        <img loading="lazy" src="/img/Wall-Thickness.jpg" alt="">
     </div>
 </div>
 <div class="row">
     <div class="col-md-6">
         <p><strong>Fiziksel</strong> <strong>Değişim</strong></p>
         <p>Kullanılan malzemeler eritilir, sinterlenir veya lazerle taranır ve katılaştırılır. Malzemenin ısınması ve soğuması, baskı sırasında parçaların bükülmesine neden olabilir. Büyük, düz yüzeyler özellikle eğrilmeye eğilimli olabilir. Doğru makine kalibrasyonu kullanılarak ve parçan ile baskı yatağı arasında yeterli yüzey yapışması sağlanarak eğrilmeden tipik olarak kaçınılabilir. <span style="text-decoration: underline;">Büyük düz yüzeylerden kaçınmalı ve 3B modele yuvarlak köşeler eklenmeli.</span></p>
-        <img src="/img/3-boyutlu-yazici-uygulamalari.jpg" alt="">
+        <img loading="lazy" src="/img/3-boyutlu-yazici-uygulamalari.jpg" alt="">
     </div>
     <div class="col-md-6">
         <p><strong>Detay</strong> <strong>Oranı</strong></p>
         <p>Karmaşık ayrıntılara sahip bir 3B model oluştururken, her 3B yazım işleminin üretebileceği minimum boyutunu akılda tutmak önemlidir. Minimum ayrıntı seviyesi, her bir 3B yazdırma işleminin yeteneklerine ve mekaniğine ve seçilen katman yüksekliğine bağlıdır.</br>Kullanılan süreç ve malzemeler, baskınızın hızı ve maliyeti üzerinde bir etkiye sahip olacaktır, bu nedenle model için daha <span style="text-decoration: underline;">küçük ayrıntıların kritik olup olmadığını belirlemek önemli bir tasarım kararıdır.</span></p>
-        <img src="/img/3-boyutlu-cikti.jpg" alt="">
+        <img loading="lazy" src="/img/3-boyutlu-cikti.jpg" alt="">
     </div>
 </div>
 
