--- a/content/dergi/sayi-4-bauhaus-turkiye.html
+++ b/content/dergi/sayi-4-bauhaus-turkiye.html
@@ -34,7 +34,7 @@ tags= [
 <p><strong>İskandinav</strong> tasarımına baktığımızda ise Lagom felsefesine değindiği (ne az, ne çok tam kararında). Ayrıca coğrafi etmenlerinde tasarıma etki ettiğini görmek mümkün.</p>
 <p>Modernizm ve Postmodernizm gibi kavramlar ancak diğer kavramlar ile birlikte incelendiğinde anlamak daha mümkün kılar.</p>
     </div>
-    <div class="col-md-6"><br><img src="/img/cubism-abstract-art.jpg" alt=""></div>
+    <div class="col-md-6"><br><img loading="lazy" src="/img/cubism-abstract-art.jpg" alt=""></div>
 </div>
 
 <p>Burada bahsetmek istediğim, tasarımı salt olarak değerlendirmenin doğru olmadığı ancak; kültür, fikir ve ideolojiyle birlikte yorumlamamız doğru olduğudur. Sanat hareketleriyse birbiriyle bağlantılı olarak devam ettiği, diğer sanat akımlarından bağıntı olmaksızın incelemek mümkün değildir. </p>
