--- a/content/dergi/sayi-4-kapak.html
+++ b/content/dergi/sayi-4-kapak.html
@@ -3,7 +3,7 @@ title = "Sayı 4 İçindekiler"
 url = "sayi-4/"
 seotitle = "Tasarım Dergisi Sayı 4 - Aralık 2020"
 description="Markut derginin yeni sayısı 4. sayı çıktı. Endüstriyel tasarım dergimizden 4. sayımızı online ücretsiz okuyabilirsiniz."
-aciklama="<h3>Dünü Unutma, Bu Günü Eyi Anlarsın.</h3> <br><br><br><small>Sayı sponsoru:</small><br><a href=\"https://www.galeyandergi.com/\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"/img/galeyan-logo.png\" alt=\"Sayı Sponsoru: Galeyan Logo\" width=\"240px\"><br><small>Dijital, Kültür Sanat Dergisi</small></a> "
+aciklama="<h3>Dünü Unutma, Bu Günü Eyi Anlarsın.</h3> <br><br><br><small>Sayı sponsoru:</small><br><a href=\"https://www.galeyandergi.com/\" target=\"_blank\" rel=\"noopener noreferrer\"><img loading="lazy" src=\"/img/galeyan-logo.png\" alt=\"Sayı Sponsoru: Galeyan Logo\" width=\"240px\"><br><small>Dijital, Kültür Sanat Dergisi</small></a> "
 date = "2020-12-01"
 thumb="/img/markut-aralik-sayi-4.svg"
 yazar=["Markut"]
