--- a/content/dergi/sayi-4-kontrplak.html
+++ b/content/dergi/sayi-4-kontrplak.html
@@ -23,7 +23,7 @@ tags= [
         <p>İnce tabakalar, yatay eksenleri boyunca döndürülerek ahşap kütüklerden soyulur. Bu işlemden elde edilen kaplama tabakaları istenen boyutlara kesilir, kurutulur, birbirine yapıştırılır ve daha sonra 140° C’de (284° F) ve 1.9 MPa’da (280 psi) preslenir. Böylece kontrplak paneli oluşturulur.</p>
         <p>Kontrplak mobilya alanında, oluşturacağınız ürünlerin niteliğine göre ağaç cinsi tercihi değişmektedir. Koltuk, raf, masa, ofis mobilyaları gibi ürünlerde filmsiz kontrplak sıklıkla kullanılır.</p>
         <p></p></div>
-       <div class="col-md-6"><img src="/img/kontrplak-Hardwood-Plywood.jpg" alt=""></div>
+       <div class="col-md-6"><img loading="lazy" src="/img/kontrplak-Hardwood-Plywood.jpg" alt=""></div>
    </div>
 
    
@@ -31,7 +31,7 @@ tags= [
 <h2>Kontrplak büküm işlemleri</h2>
    <div class="row">
     <div class="col-md-6">
-        <img src="https://thumbs.gfycat.com/BitesizedGeneralHoopoe-size_restricted.gif" alt="">
+        <img loading="lazy" src="https://thumbs.gfycat.com/BitesizedGeneralHoopoe-size_restricted.gif" alt="">
       <br>  <small>Kontrplakta çentik bükme yöntemi</small>
         <br><br>
         <p>Ahşaptan daha güçlü ve yapıştırılmış kaplama katmanlarının birbirine dik olarak sıkıştırılmasıyla oluşturulan kontrplak, hem deneysel hem de geleneksel tasarımcıların sevgilisidir. Öncelikle kontrplağı mobilyalarda kullanarak zirvelere taşıyan beş ikonik tasarımcı ve onların tasarımlarına bakalım.</p>
@@ -62,7 +62,7 @@ tags= [
 <p>Aalto'nun çığır açan eğimli huş kontrplak mobilyaları, 1931'de kalıplanmış kontrplağın yapabileceklerinin sınırlarını zorluyor.  Mimarın çarpıcı, havadar formları, ağır, geleneksel mobilyalardan ciddi bir sapmaydı. Dönemin ve ev döşemeleri için tamamen keşfedilecek modern ve sağlam yeni bir malzeme olan kontrplağın yolunu açtı.</p>
     </div>
     <div class="col-md-7"><figure class="figure">
-        <img class="figure-img img-fluid" src="/img/alvar-aalto-paimio-chair.jpg" alt="">
+        <img loading="lazy" class="figure-img img-fluid" src="/img/alvar-aalto-paimio-chair.jpg" alt="">
         <figcaption class="figure-caption">Alvar Aalto, Paimio Chair</figcaption>
     </figure></div>
 </div>
@@ -74,7 +74,7 @@ tags= [
         <p>Tasarım dünyasında bu ikonik çiftin farkında olmayan neredeyse kimse yok ve bunun iyi bir nedeni var. Alvar Aalto, Charles ve Ray Eames çifti üzerinde büyük bir etkiye sahipti. Çığır açan tasarımları yeni ve heyecan verici bir malzemenin çok yönlülüğünü vurguladı - kontrplak. Charles Eames, İkinci Dünya Savaşından önce kontrplak kalıplama deneyleri yapıyordu ve Ray ve Charles'ın ağır, masif ahşabın aksine bu yeni, daha hafif, esnek malzemeyi kullanması, mobilya tasarımında çarpıcı yeni bir yön belirledi.</p>
         
     </div>
-    <div class="col-md-7"><img src="/img/charles-ray-eames.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/charles-ray-eames.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -83,7 +83,7 @@ tags= [
     <div class="col-md-5">
         <p>Mimar Frank Gehry'nin üretken çalışma yapısı ve büyüleyici yapıları onu dünya çapında  tanınır hale getirdi. Çocukluğundan kalma ahşap elma kasalarının gücünden ilham alan Gehry, tasarladığı binalar kadar heykelsi olarak güzel ve güçlü bir oturma ve masa koleksiyonu oluşturmak için basit bükülmüş kontrplak şeritleri kullanarak bir mobilya serisi yarattı. Gehry, Bent Wood Koleksiyonu için "Bükülmüş ahşap mobilyaları; bükülebilir, yaylı ve hafif yapmak gerçekten mümkün." dedi.</p>
         </div>
-    <div class="col-md-7"><img src="/img/frank-gehry-kontrplak.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/frank-gehry-kontrplak.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -91,7 +91,7 @@ tags= [
 <div class="row">
     <div class="col-md-5"><p>Yeteneklerini keşfetmek için çeşitli malzemeler kullanan bir başka üretken tasarımcı olan Diez, sergilerinde ve ürün tasarımlarında sık sık bükülmüş kontrplak ile çalışıyor. Kontrplağın inanılmaz çok yönlülüğünden yararlanarak, malzemeye geometrik bir duyarlılık katarken, malzemenin neredeyse her şekle girebilme yeteneği sayesinde ışığını ve oyunculuğunu koruyor.</p>
     </div>
-    <div class="col-md-7"><img src="/img/stefan-diez.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/stefan-diez.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -99,7 +99,7 @@ tags= [
 <div class="row">
     <div class="col-md-5"><p>Fransız tasarımcılar (ve kardeşler) Ronan ve Erwan, ilgi çekici tasarımları ile ünlendiler ve kontrplakla yaptıkları çalışmalarla farklı bir yorum katıyorlar. HAY ve Matiazzi ile yaptıkları işbirlikleri, kaplamalı ahşap ile tasarım yapma becerilerinin altını çiziyor. Çalışmaları sadece kontrplağın modern, arzu edilen bir tasarım malzemesi olarak konumunu güzelliğini, dayanıklılığını ve uyarlanabilirliğini vurgulayan heyecan verici çeşitlilikteki bir uygulama yelpazesiyle sağlamlaştırıyor.</p>
     </div>
-    <div class="col-md-7"><img src="/img/ronan-erwan-bouroullec.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/ronan-erwan-bouroullec.jpg" alt=""></div>
 </div>
 
 <p>Şimdi ise dokusu ve rengi ile bulunduğu ortamın havasına ayrı tat katan kontrplağın, iç mekan tasarımında kullanıldığında nasıl bir görsel şölen yaratacağına birkaç tasarımla şahit olalım.</p>
@@ -110,7 +110,7 @@ tags= [
 <div class="row">
     <div class="col-md-5"><p>Milano'nun merkezinde yer alan Kengo Kuma'nın Camper Camper Together projesi için tasarımı çok basit bir üretken sistemi karmaşık bir şekilde kullanıyor. Mağazanın duvarlarını çizen raflar, bir çift ayakkabı sığacak kadar geniş kare bir ızgaraya dayanır ancak ızgaranın bölümlerini seçici olarak kaldırarak, iç mekana ince bir çeşitlilik kazandıran soyut kompozisyonlar yapılır. Kengo Kuma ve ortakları tarafından tasarlanan kontrplak yüzeyler, Mario Nanni ile işbirliği içinde geliştirilen entegre aydınlatma sistemini de zarif bir şekilde gizliyor.</p>
     </div>
-    <div class="col-md-7"><img src="/img/camper-store-milano.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/camper-store-milano.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -119,7 +119,7 @@ tags= [
     <div class="col-md-5"><p>Don Café'de yapılan çalışmalar ve araştırmalar sayesinde Inarch, modern bir görüntü vererek onu diğer geleneksel kahve barlarından ayırması beklenen benzersiz bir kavramsal ve görsel konsept ortaya çıkardı. Tasarım için fikir/ilham, kahve taneleri ile doldurulmuş çuvaldan kaynaklanmaktadır. Barın duvarları organik olarak şekillendirilmiş ve “Kontrplak” tip ahşaptan yapılmış kahve çuvalına benzer şekilde renklendirilmiştir, bu arada aradaki sütunlar tekstil kahve çuvalları ile kaplanmıştır. Masalar ve avizeler, bir kahve çuvalının içinde kalma izlenimi yaratmak için asimetrik olarak listelenen kahve taneleri gibidir.</p>
         <p>Proje uygulaması esas olarak 2 cm ve 4 cm kalınlığında kontrplak ile yapılır. Öngörülen organik formu elde etmek için, kontrplak CNC makine ile parça parça kesilir ve birlikte monte edilir. Kontrplakların her biri ayrı ayrı tasarlanmıştır. Tüm bina birlikte tasarlanan, kesilen ve monte edilen 1365 parçadan oluşmuştur.</p>
         </div>
-    <div class="col-md-7"><img src="/img/don-cafe-house-innarch.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/don-cafe-house-innarch.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -127,7 +127,7 @@ tags= [
 <div class="row">
     <div class="col-md-5"><p>Kontrplak ev, Palma'nın sakin bir semtinde bir kasabada yer almaktadır.</br>Taban yapısını korurken orijinal halini bozmadan kat çıkacak bir zeminle genişletme ihtiyacı doğdu. Orijinal taş duvarları aşırı yüklememek için hafif bir çözüm gerekiyordu.  Mevcut taş yapıya hafif bir çözüm bulunması gereği, kavak kontrplak panolara dayalı bir prefabrik sistem tarafından karşılandı. Bu proje, farklı sanayileşme derecelerine sahip yerel ürünleri kullanarak, yerel malzemeleri ve zanaatkârları birleştirmiştir. Endüstriyel kökenlerine rağmen, kontrplağı ham, verniksiz kaplamada tutma, mandalları ve eklemleri ortaya çıkarma kararıyla daha da belirgin hale getirilmiştir. Yeni tavanların çeşitli yapısal geometrisi eski Palma kentinin etnik süslemesini ustaca yansıtmasıyla geçmişi bugünle bağlar. Proje, evin içinde çeşitli "atmosferik bölgeler" kurar.</p>
     </div>
-    <div class="col-md-7"><img src="/img/plywood-house-kontrplak-ev.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/plywood-house-kontrplak-ev.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -139,7 +139,7 @@ tags= [
         <p>İkinci bölüm, mağazanın ortasında Shen personelinin belirli ürünleri ön plana çıkarabileceği ve müşterilerle detaylı olarak konuşabileceği veya nasıl kullanıldığını gösterebileceği birkaç üçgen kontrplak adadan oluşmuştur.</p>
         <p>Mağazanın sağ tarafında makyaj dersleri gibi hizmetler için kullanılan üçüncü bölüm vardır.</p>
         </div>
-    <div class="col-md-7"><img src="/img/shen-magazasi.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/shen-magazasi.jpg" alt=""></div>
 </div>
 
 <hr>
@@ -153,7 +153,7 @@ tags= [
         <p>Bu tasarımla ilgili aldıkları geri bildirimler, onları her boyutta veya şekilde alana uygun, daha esnek bir sistem geliştirmeye yönlendirdi.</p>
         <p>Lindholm ve Husum, tasarımı ilk kez 2016 yılında IKEA'nın inovasyon laboratuvarı Space10 ile işbirliği içinde geliştirmeye başladı. Birlikte, Kopenhag'daki CHART Sanat Fuarı ve Milano'daki IKEA Festivali'nde sundukları küresel bir bahçe tasarımı olan Growroom'u ürettiler.</p>
         </div>
-    <div class="col-md-7"><img src="/img/growmore-husum.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" src="/img/growmore-husum.jpg" alt=""></div>
 </div>
 
 
