--- a/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
+++ b/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
@@ -36,12 +36,12 @@ tags= ["ana sayfa", "dergi"]
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
-				{{<img src="odun.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="odun.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 			</figure>
 		</div>
 		<div class="col-md-6">
 			<figure>
-				{{<img src="tasarimda-malzeme-cardboard-03.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="tasarimda-malzeme-cardboard-03.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 			</figure>
 		</div>
 	</div>
@@ -80,7 +80,7 @@ tags= ["ana sayfa", "dergi"]
 
 	<figure>
 
-		{{<img src="tasarimda-malzeme-cardboard-04.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+		{{<img loading="lazy" src="tasarimda-malzeme-cardboard-04.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 	</figure>
 	<p>
@@ -95,12 +95,12 @@ tags= ["ana sayfa", "dergi"]
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
-				{{<img src="tasarimda-malzeme-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="tasarimda-malzeme-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 			</figure>
 		</div>
 		<div class="col-md-6">
 			<figure>
-				{{<img src="tasarimda-malzeme-cardboard-02.png" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="tasarimda-malzeme-cardboard-02.png" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 			</figure>
 		</div>
 	</div>
@@ -117,7 +117,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="frank-gehry.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="frank-gehry.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 			<blockquote class="">
@@ -149,7 +149,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="wiggle-side-chair.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="wiggle-side-chair.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -185,7 +185,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="contour-sandalye.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="contour-sandalye.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -209,7 +209,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="r-bar-tabure.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="r-bar-tabure.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -233,7 +233,7 @@ tags= ["ana sayfa", "dergi"]
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
-				{{<img src="side-chair.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="side-chair.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 			</figure>
 		</div>
 		<div class="col-md-6">
@@ -262,25 +262,25 @@ tags= ["ana sayfa", "dergi"]
 	<div class="row">
 		<div class="col-md-3">
 			<figure class="figure">
-				{{<img class="figure-img img-fluid" src="carumba-edges.jpg" alt="Carumba Experimental Edges Sandalye, 1987">}}
+				{{<img loading="lazy" class="figure-img img-fluid" src="carumba-edges.jpg" alt="Carumba Experimental Edges Sandalye, 1987">}}
 				<figcaption class="figure-caption">Carumba Experimental Edges Sandalye, 1987</figcaption>
 			</figure>
 		</div>
 		<div class="col-md-3">
 			<figure class="figure">
-				{{<img class="figure-img img-fluid" src="frank-gehry-chair.jpg" alt="Küçük Kunduz Sandalye, 1929">}}
+				{{<img loading="lazy" class="figure-img img-fluid" src="frank-gehry-chair.jpg" alt="Küçük Kunduz Sandalye, 1929">}}
 				<figcaption class="figure-caption">Küçük Kunduz Sandalye, 1929</figcaption>
 			</figure>
 		</div>
 		<div class="col-md-3">
 			<figure class="figure">
-				{{<img class="figure-img img-fluid" src="rocking-chair.jpg" alt="Rocking Sandalye, 1972">}}
+				{{<img loading="lazy" class="figure-img img-fluid" src="rocking-chair.jpg" alt="Rocking Sandalye, 1972">}}
 				<figcaption class="figure-caption">Rocking Sandalye, 1972</figcaption>
 			</figure>
 		</div>
 		<div class="col-md-3">
 			<figure class="figure">
-				{{<img class="figure-img img-fluid" src="set-of-nesting-chair.jpg" alt="Set of Nesting Sandalyesi, 1972">}}
+				{{<img loading="lazy" class="figure-img img-fluid" src="set-of-nesting-chair.jpg" alt="Set of Nesting Sandalyesi, 1972">}}
 				<figcaption class="figure-caption">Set of Nesting Sandalyesi, 1972</figcaption>
 			</figure>
 		</div>
@@ -288,7 +288,7 @@ tags= ["ana sayfa", "dergi"]
 
 	<figure>
 
-		{{<img src="easy-edges.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+		{{<img loading="lazy" src="easy-edges.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 	</figure>
 	<p></p>
@@ -308,7 +308,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="david-graas-karton-sandalye.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="david-graas-karton-sandalye.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -331,7 +331,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="v-sandalye-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="v-sandalye-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -354,7 +354,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="refold-karton-masa.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="refold-karton-masa.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -389,7 +389,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="shigeru-ban.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="shigeru-ban.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -424,7 +424,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="shigeru-ban-kat-bolme-sistemi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="shigeru-ban-kat-bolme-sistemi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -449,7 +449,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="shigeru-ban-karton-afet-konutlar.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="shigeru-ban-karton-afet-konutlar.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -475,7 +475,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="kat-kilise.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="kat-kilise.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -502,7 +502,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="kat-kilise-kobe.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="kat-kilise-kobe.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -544,7 +544,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="ezop-dtla-magazasi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="ezop-dtla-magazasi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -569,7 +569,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="nothing-ofisi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="nothing-ofisi.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -595,7 +595,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="flatform.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="flatform.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
@@ -618,7 +618,7 @@ tags= ["ana sayfa", "dergi"]
 		<div class="col-md-6">
 			<figure>
 
-				{{<img src="mumbai-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
+				{{<img loading="lazy" src="mumbai-cardboard.jpg" alt="Tasarımda Malzeme: Karton, Cardboard">}}
 
 			</figure>
 		</div>
