--- a/content/dergi/sayi-6/malzeme-seramik/index.html
+++ b/content/dergi/sayi-6/malzeme-seramik/index.html
@@ -385,11 +385,7 @@ tags= ["ana sayfa", "dergi"]
                nasıl ayırt ettiğimiz de her zaman oynadığım şeydir.&quot;
             </p>
          </blockquote>
-         <a
-            href="https://www.youtube.com/watch?v=FroBcnks9q0&amp;feature=emb_title&amp;ab_channel=CanadaCouncil"
-         >
-            https://www.youtube.com/watch?v=FroBcnks9q0&amp;feature=emb_title&amp;ab_channel=CanadaCouncil
-         </a>
+         <iframe width="100%" height="315" src="https://www.youtube.com/embed/FroBcnks9q0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-md-8">
          <p>
